--- a/sandhya.html
+++ b/sandhya.html
@@ -7,7 +7,8 @@
 
   <title>Happy birthday project</title>
 
-  <link rel="stylesheet" href="sandhya.css">
+  <link rel="stylesheet" type="text/css" href="sandhya.css">
+
 </head>
 
 <body>
